[package]
name = "render"
version.workspace = true
edition.workspace = true
description = "Rendering engine - paint commands and display"

[dependencies]
layout = { workspace = true }
style = { workspace = true }
softbuffer = { workspace = true }
resvg = "0.42"
tiny-skia = "0.11"
log = { workspace = true }
